<resources>
    <string name="app_name">Beat Store</string>
    <string name="channel_description">Make great music with beats</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_restore">Restore</string>
    <string name="action_search">Search</string>
    <string name="action_toggle">Search by Beats or Producer</string>
    <string name="action_search_by">Search By</string>
    <string name="search_hint">Category Name</string>
    <string name="search_by_beat">Beat Name</string>
    <string name="search_by_producer">Producer Name</string>
    <string name="create_account">Create Account</string>
    <string name="login_header">View order history. Download beat purchases online.</string>
    <string name="login_google">Log In with Google</string>
    <string name="login_facebook">Log In with Facebook</string>

    <string name="tag_beats">Beats</string>
    <string name="tag_beat_producers">Beat Producers</string>
    <string name="tag_favorites">Favorites</string>
    <string name="tag_library">Library</string>
    <string name="tag_account_settings">Account Settings</string>

    <string name="read_more_tag">Read More</string>
    <string name="read_less_tag">Read Less</string>

    <string name="empty_view_text">It\'s a bit lonely here…</string>
    <string name="empty_view_text_head">Please login with your Google Account to restore your Purchases</string>
    <string name="no_internet">No internet connection.</string>


    <string name="file_provider_authority">com.makehitmusic.hiphopbeats.fileprovider</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_titles">
        <item>Beats</item>
        <item>Beat Producers</item>
        <item>Favorites</item>
        <item>Library</item>
        <item>Account Settings</item>
    </string-array>

    <string name="version_number">v 1.0</string>
    <string name="company_title">© 2018 Make Hit Music, LLC.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <!-- Old/Debug -->
    <!--<string name="server_client_id">878344980190-juhjeoakvvp5q15l1j49g2c329iph8p2.apps.googleusercontent.com</string>-->
    <!-- New/Release -->
    <string name="server_client_id">878344980190-0nd63vmdajhlea133fsloou09kqaidd3.apps.googleusercontent.com</string>

    <!-- Client Base 64 Encoded RSA Key. Used for In-App Purchase. Found on Play Console -->
    <string name="base_64_rsa_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAyKI7pQigSOkjyuYQ6adgaZ7e00zFiCkIDNlIOlPIu1eUa12ef3A2mx4BDvzKepEODH9QEL0AMulvw4HpXSVOsR17x9F6HIkrpTnCqruCKnEJsBbpBygP2mwu5iMXYr8zjdxKisHvroosS+oufGC6XqaiJSynGkfjjNbsF/NN+Oa4Zzlb0WaNH/FTUcdL+5NF0wr9u37NHp/jrP5fjs4oBJF7E1HrlZ4qO8/pWY+JcOqCJlmHtMhQpygttDQfvLDlHLT8HRh33iysT0V5YGMAo1DO3L5ISlcmTi/mHfShTFIaT2HU7oiyXZWKQ5OeHsuGO2WmPLA+oaGbnIuYGWJiIQIDAQAB</string>

    <!-- Facebook App ID -->
    <string name="facebook_app_id">2326506384058206</string>
    <string name="fb_login_protocol_scheme">fb[2326506384058206]</string>

    <string name="preference_login">LoginPreferences</string>
    <string name="email_option">Email</string>
    <string name="drive_option">Google Drive</string>

    <!-- Settings Screen Headers -->
    <string name="head_profile">Profile</string>
    <string name="head_purchases">In App Purchases</string>
    <string name="head_apps">Other Apps</string>
    <string name="head_others">Others</string>

    <!-- Settings Screen Subheaders -->
    <string name="subhead_logout">Logout</string>
    <string name="subhead_purchases">Restore Purchases</string>
    <string name="subhead_license">Beat Licensing FAQs</string>
    <string name="subhead_apps">Songwriter\'s Pad - The Songwriting App (Free)</string>
    <string name="subhead_sell">How Can I Sell My Beats?</string>
    <string name="subhead_idea">Learn To Make Apps Without Coding!</string>
    <string name="subhead_review">Write A Review</string>
    <string name="subhead_support">Contact Support</string>
    <string name="subhead_terms">Terms Of Use</string>
    <string name="subhead_policy">Privacy Policy</string>

    <!-- Settings Screen Keys -->
    <string name="key_logout">key_logout</string>
    <string name="key_purchases">key_purchases</string>
    <string name="key_license">key_license</string>
    <string name="key_apps">key_apps</string>
    <string name="key_sell">key_sell</string>
    <string name="key_idea">key_idea</string>
    <string name="key_review">key_review</string>
    <string name="key_support">key_support</string>
    <string name="key_terms">key_terms</string>
    <string name="key_policy">key_policy</string>

    <!-- Settings Screen Summary -->
    <string name="summary_purchases">Restore your previously purchased beats</string>
    <string name="summary_apps">Eliminate writer\'s block and take your lyrics to the next level with a built in rhyme dictionary and idea generator. Used by Grammy Award winners and beginners alike.</string>

</resources>
