<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beats"
            android:icon="@drawable/twotone_surround_sound_black_24"
            android:title="@string/tag_beats" />
        <item
            android:id="@+id/nav_beat_producers"
            android:icon="@drawable/twotone_supervised_user_circle_black_24"
            android:title="@string/tag_beat_producers" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/twotone_favorite_black_24"
            android:title="@string/tag_favorites" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/twotone_library_music_black_24"
            android:title="@string/tag_library" />
        <item
            android:id="@+id/nav_account_settings"
            android:icon="@drawable/twotone_settings_black_24"
            android:title="@string/tag_account_settings" />
    </group>

</menu>
