<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/action_search_by"-->
        <!--android:orderInCategory="4"-->
        <!--android:title="@string/action_search_by"-->
        <!--app:showAsAction="never" >-->

        <!--<menu>-->
            <!--<group android:checkableBehavior="single" >-->
                <!--<item-->
                    <!--android:id="@+id/search_by_beat"-->
                    <!--android:title="@string/search_by_beat"-->
                    <!--android:checked="true" />-->
                <!--<item-->
                    <!--android:id="@+id/search_by_producer"-->
                    <!--android:title="@string/search_by_producer"/>-->
            <!--</group>-->
        <!--</menu>-->

    <!--</item>-->
    <item
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/action_restore"
        android:orderInCategory="3"
        android:title="@string/action_restore"
        app:showAsAction="never" />
    <item
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/action_search"
        android:orderInCategory="2"
        android:title="@string/action_search"
        android:icon="@drawable/round_search_black_24"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/action_toggle"
        android:orderInCategory="1"
        android:title="@string/action_toggle"
        android:checked="false"
        android:visible="false"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
</menu>
